Update logo text in index.html

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 <body>
 
     <nav>
-        <div class="logo" id="siteLogo">SUNEEL WORKSHOP</div>
+        <div class="logo" id="siteLogo">SUNEEL saadi card printing work</div>
         <div class="nav-controls">
             <button class="lang-btn" onclick="toggleLanguage()">
                 <i class="fas fa-language"></i>
